--- a/vuedemo01/src/main/webapp/demo04.html
+++ b/vuedemo01/src/main/webapp/demo04.html
@@ -13,7 +13,7 @@
         el:"#app",
         methods:{
             fun:function () {
-
+                alert("hahaha")
             }
         }
 
